Resolve "[FEAT] Implement Contact Us page low fidelity"

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -21,6 +21,7 @@
         "react/jsx-filename-extension": [1, {
             "extensions": [".js", ".jsx"]}
             ],
-            "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "max-len":"off"
     }
 }
