Resolve "[FEAT] Implement mid fidelity our work page"

--- a/website/src/app/views/our-work/ProjectCard.json
+++ b/website/src/app/views/our-work/ProjectCard.json
@@ -1,3 +1,4 @@
+
 {
   "project1":
   {
@@ -18,6 +19,12 @@
     "imageURL":"https://seedworld.com/site/wp-content/uploads/2018/12/blueprint-4056027_640.jpg",
     "projectName" : "Crime Survivors",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "projectURL" : "https://google.com"
+  },
+  "project4":
+  {
+    "projectName" :"Crime Survivors",
+    "description" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore",
     "projectURL" : "https://google.com"
   }
 }
