--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: node
  
 stages: 
  - lint
+ - deploy
  
 eslint:
  stage: lint
@@ -12,3 +13,12 @@ eslint:
    - npx install-peerdeps eslint-config-airbnb
    - eslint --ext js,jsx .
  
+deploy_staging:
+  stage: deploy
+  script:
+    - echo "Deploying to test site
+  environment:
+    name: staging
+    url: http://ctc-uci.com
+  only:
+    - dev
