--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.4",
     "react-spring": "^8.0.27",
     "react-visibility-sensor": "^5.1.1"
   },
@@ -20,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "husky install"
   },
   "husky": {
     "hooks": {
@@ -58,8 +59,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2"
   }
 }
