--- a/website/package.json
+++ b/website/package.json
@@ -20,8 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "postinstall": "husky install"
+    "lint": "eslint ."
   },
   "husky": {
     "hooks": {
