--- a/.github/workflows/issue-branch-creater.yml
+++ b/.github/workflows/issue-branch-creater.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Create Issue Branch
         uses: robvanderleek/create-issue-branch@main
         env:
-          GITHUB_TOKEN: ${{ secrets.CTC_WEBSITE_PAT }}
+          GITHUB_TOKEN: ${{ secrets.CTC_DEVOPS_ORG_PAT }}
