[F2022] Post Recruitment Updates (#265)
Closes recruitment links after 9/30 deadline
+
- Commonize animations & resolve ESLint commit errors
- Shorten Madhu name & change Alan image
- Remove some elements from selectable hierarchy for easier highlighting
- Make ProjectCards and social logos on homepage easier to view on mobile

--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -21,6 +21,8 @@
         "react/jsx-filename-extension": [1, {
             "extensions": [".js", ".jsx"]}
             ],
+        "react/jsx-props-no-spreading": "off",
+        "react/no-array-index-key": "off",
         "import/no-unresolved": "off",
         "max-len":"off"
     }
