--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -22,8 +22,11 @@
             "extensions": [".js", ".jsx"]}
             ],
         "react/jsx-props-no-spreading": "off",
+        "react/jsx-no-unescaped-entities": "off",
+        "react/jsx-one-expression-per-line": "off",
         "react/no-array-index-key": "off",
         "import/no-unresolved": "off",
-        "max-len":"off"
+        "max-len":"off",
+        "quotes": "off"
     }
 }
