--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -18,6 +18,7 @@
         "react"
     ],
     "rules": {
+        "react/function-component-definition": "off",
         "react/jsx-filename-extension": [1, {
             "extensions": [".js", ".jsx"]}
             ],
