--- a/website/.gitignore
+++ b/website/.gitignore
@@ -4,13 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn
-!.yarn/cache
+.yarn/*
+.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+.pnp.*
 
 # testing
 /coverage
